[gd_scene load_steps=5 format=3 uid="uid://tgsnni7av3vm"]

[ext_resource type="Script" path="res://castelet_core/gui_node/settings_node.gd" id="1_6jcys"]
[ext_resource type="StyleBox" uid="uid://c2c1o4ao7016i" path="res://castelet_default_assets/default_speaker_window.tres" id="1_tydg6"]
[ext_resource type="FontFile" uid="uid://kgrh7hs65hcq" path="res://castelet_default_assets/fonts/liberation_serif/liberation_serif_bold.ttf" id="2_ul4na"]
[ext_resource type="FontFile" uid="uid://6grd7dg47tt" path="res://castelet_default_assets/fonts/liberation_serif/liberation_serif_regular.ttf" id="3_71efw"]

[node name="SettingsNode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jcys")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_tydg6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="WindowModeLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_fonts/normal_font = ExtResource("2_ul4na")
theme_override_font_sizes/normal_font_size = 30
text = "Window Mode"
fit_content = true

[node name="WindowModeOptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_71efw")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TextSpeedLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_fonts/normal_font = ExtResource("2_ul4na")
theme_override_font_sizes/normal_font_size = 30
text = "Text Speed"
fit_content = true

[node name="TextSpeedSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SkipOnChoiceLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_fonts/normal_font = ExtResource("2_ul4na")
theme_override_font_sizes/normal_font_size = 30
text = "Stop Skipping on Choices"
fit_content = true

[node name="SkipOnChoiceCheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_colors/font_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_fonts/font = ExtResource("3_71efw")
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Force-stop skipping on choices."

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeSkipAfterChoiceLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_fonts/normal_font = ExtResource("2_ul4na")
theme_override_font_sizes/normal_font_size = 30
text = "Resume Skipping After Choices"
fit_content = true

[node name="ResumeSkipAfterChoiceCheckBox" type="CheckBox" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_colors/font_color = Color(0.160784, 0.054902, 0.0509804, 1)
theme_override_fonts/font = ExtResource("3_71efw")
theme_override_font_sizes/font_size = 30
text = "Resume skipping after choices."

[node name="Return Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[connection signal="item_selected" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/WindowModeOptionButton" to="." method="_on_window_mode_option_button_item_selected"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/TextSpeedSlider" to="." method="_on_text_speed_slider_drag_ended"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/SkipOnChoiceCheckBox" to="." method="_on_skip_on_choice_check_box_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/ResumeSkipAfterChoiceCheckBox" to="." method="_on_resume_skip_after_choice_check_box_toggled"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Return Button" to="." method="_on_return_button_button_down"]
